[BAHIR-54] Remove scala support from parent pom